--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Mitr&family=Sarabun:wght@200&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Sarabun', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+    font-family: 'Sarabun', sans-serif;
+    font-size: 10px;
+    background-color: orange; 
 }
+
+.link{
+    color: white;
+}
+.link:hover{
+    color:yellow;
+}
+.avatar {
+    width: 25%;
+    display: block;
+}
+.img-circle {
+    border-radius: 50%;
+}
+  
+.data {
+    padding: 32px;
+    padding-top: 24px;
+}
+
+h1 {
+    font-family: "Mitr" , sans-serif ;
+    
+}
+h6{
+    font-family: "Itim" , sans-serif ; 
+    
+}
+p {
+    font-family: "Mitr" , sans-serif ;
+    margin-bottom: 12Px;
+    text-align: center;
+}
+
+
+body{
+    font-family: 'Pridi', serif;
+}
+.card {
+    width: 450px;
+    margin: 40px;
+    border: 4px solid #222;
+}
+
+.card::after {
+    content: "";
+    display: block;
+}
+
+.skill-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-top: 16px;
+  }
+  
+  .skill {
+    padding: 2px 12px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-weight: 500;
+  }
+  .myfooter{
+    text-align: left;
+    font-family: 'Sarabun', sans-serif;
+    font-size: 10px;
+    
+  }
+h5 {
+    font-family: 'Sarabun', sans-serif;
+    font-weight: bold;
+}
+
+.table{
+    font-family: "Itim" , sans-serif;
+    font-size: small;
+    
+}
+.button{
+    font-family: "Itim" , sans-serif;
+    
+}
+
+
+
+
+    
+
+ 
